
Version [next]
----------------------------------------
+ #241 (LightBDD.Framework)(New) Added WithInferredColumns(InferredColumnsOrder columnsOrder) method to IInputTableBuilder and IVerifiableDataTableBuilder with option to add inferred columns in name or declaration order
+ #264 (LightBDD.Framework)(Fix) Corrected Html Report to expand feature background with the content
+ #268 (LightBDD.Framework)(New) Added InputTree<T> to provide detailed insights into the object structure upon progress and results rendering.
+ #268 (LightBDD.Framework)(New) Added VerifiableTree<T> to provide detailed structural verification of actual versus expected object hierarchies
+ #268 (LightBDD.Framework)(New) Added Tree class with a set of methods to create InputTree<T> and VerifiableTree<T> parameters
+ #268 (LightBDD.Framework)(Change) Equal() expectation supports now comparison of numeric types that have equivalent values, i.e. 5.0 (double) to 5 (int)
+ #268 (LightBDD.Framework)(Change) CastFrom() expectation support now conversions of numeric types that have equivalent values, i.e. 5.0 (double) to 5 (int)

Version 3.5.0
----------------------------------------
+ #260 (LightBDD.MsTest2)(Change) Updated MSTest.TestFramework to 2.2.10
+ #260 (LightBDD.NUnit3)(Change) Updated NUnit dependency to 3.13.3
+ #260 (LightBDD.Fixie2)(Change) Dropped netcoreapp2.0 support
+ #260 (Examples) Removed Example.LightBDD.MsTest2.UWP project as UWP is deprecated
+ #255 (LightBDD.Core) Added IStep.AttachFile() method allowing to add file attachments to steps and fired StepFileAttached progress notification event when attachment is made
+ #255 (LightBDD.Core) Added ReportWritersConfiguration.UpdateFileAttachmentsManager() to allow re-configuring file attachments storage
+ #255 (LightBDD.Framework) Added support to attach files to steps with StepExecution.Current.AttachFile()