@@ -6,6 +6,7 @@ using LightBDD.Core.Formatting.Values;
 using LightBDD.Core.Results.Parameters;
 using LightBDD.Core.Results.Parameters.Tabular;
 using LightBDD.Framework.Formatting.Values;
+using LightBDD.Framework.Parameters.Implementation;
 using LightBDD.Framework.Results.Implementation;
 
 namespace LightBDD.Framework.Parameters
@@ -33,7 +34,9 @@ namespace LightBDD.Framework.Parameters
         public InputTable(IEnumerable<InputTableColumn> columns, IReadOnlyList<TRow> rows)
         {
             _rows = rows;
-            _columns = columns.ToArray();
+            _columns = columns
+                .DefaultIfEmpty(InputTableColumn.FromColumnInfo(TableColumnProvider.ItemColumn))
+                .ToArray();
         }
 
         void IComplexParameter.SetValueFormattingService(IValueFormattingService formattingService)
